@@ -1,5 +1,9 @@
 2011-10-13  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-locate/src/ipmi-locate.h: Fix typo.
+	
+2011-10-13  Albert Chu <chu11@llnl.gov>
+
 	* Update copyright globally.
 	
 2011-10-06  Albert Chu <chu11@llnl.gov>
